Token counting
* Returns token usage data in query and streaming query responses
* Attempts to read token usage data from llama-stack responses
** Fails because llama-stack doesn't actually return usage
   data in the Agent API responses
* We fall back to estimating locally
** Accuracy will vary, but it should be nearly 100% for GPT models.
